force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/Disputes_PEGA_Integration_Event__e.object-meta.xml
<CustomObject>
    <description>This event is generated only for CARD , ATM and NPP and when case is submitted by the user and is used for PEGA Integration.</description>
    <label>Disputes PEGA Integration Event</label>
    <pluralLabel>Disputes PEGA Integration Events</pluralLabel>
</CustomObject>