force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>The Id of the submitted dispute.</description>
    <label>Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>