force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>A unique w3 standard 16 byte hex string, used for logging purpose.</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>