force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/fields/Original_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Number__c</fullName>
    <description>The original case number of the submitted dispute, copied on insertion. Useful if we had to restore as the standard field is an auto-number.</description>
    <label>Original Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>