force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>The name of the submitted dispute&apos;s record type.</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>