force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/fields/Span_Id__c.field-meta.xml
<CustomField>
    <fullName>Span_Id__c</fullName>
    <description>Can be set for logs that are part of a particular processing span. If Span Id is present, Trace Id SHOULD also be present. This field is optional.</description>
    <label>Span Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>