force-app/main/default/objects/Disputes_PEGA_Integration_Event__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Fabric</complianceGroup>
    <description>The Id of the transaction the dispute was raised against.</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>